syntax = "proto3";

package favorite.api.favorite.v1;

option go_package = "/favorite/api/favorite/v1;v1";
import "google/api/annotations.proto";

service FavoriteService {
  // 点赞/取消点赞
  // 登录用户才能点赞
  rpc Favorite (douyin_favorite_action_request) returns (douyin_favorite_action_response) {
    option (google.api.http) = {
      post: "/douyin/favorite/action"
      body: "*"
    };
  }

  // 获取用户点赞视频列表
  rpc FavoriteList (douyin_favorite_list_request) returns (douyin_favorite_list_response) {
    option (google.api.http) = {
      get: "/douyin/favorite/list"
    };
  }

  // 获取视频的获赞数
  rpc GetFavoriteCntByVId (GetFavoriteCntByVIdRequest) returns (GetFavoriteCntByVIdResponse) {
    option (google.api.http) = {
      get: "/douyin/favorite/count/video"
    };
  }

  // 是否喜欢视频
  rpc GetIsFavorite (GetIsFavoriteRequest) returns (GetIsFavoriteResponse) {
    option (google.api.http) = {
      get: "/douyin/favorite/is_favorite"
    };
  }

  // 获取用户的获赞数和点赞数量
  rpc GetFavoriteCntByUId (GetFavoriteCntByUIdRequest) returns (GetFavoriteCntByUIdResponse) {
    option (google.api.http) = {
      get: "/douyin/favorite/count/user"
    };
  }
}


message Video {
  int64 id = 1 [json_name = "id"]; // 视频唯一标识
  User author = 2 [json_name = "author"]; // 视频作者信息
  string play_url = 3 [json_name = "play_url"]; // 视频播放地址
  string cover_url = 4 [json_name = "cover_url"]; // 视频封面地址
  int64 favorite_count = 5 [json_name = "favorite_count"]; // 视频的点赞总数
  int64 comment_count = 6 [json_name = "comment_count"]; // 视频的评论总数
  bool is_favorite = 7 [json_name = "is_favorite"]; // true-已点赞，false-未点赞
  string title = 8 [json_name = "title"]; // 视频标题
}


message User {
  int64 id = 1 [json_name = "id"]; // 用户id
  string name = 2 [json_name = "name"]; // 用户名称
  int64 follow_count = 3 [json_name = "follow_count"]; // 关注总数
  int64 follower_count = 4 [json_name = "follower_count"]; // 粉丝总数
  bool is_follow = 5 [json_name = "is_follow"]; // true-已关注，false-未关注
  string avatar = 6 [json_name = "avatar"]; // 用户头像
  string background_image = 7 [json_name = "background_image"]; // 用户个人页顶部大图
  string signature = 8 [json_name = "signature"]; // 个人简介
  int64 total_favorited = 9 [json_name = "total_favorited"]; // 获赞数量
  int64 work_count = 10 [json_name = "work_count"]; // 作品数量
  int64 favorite_count = 11 [json_name = "favorite_count"]; // 点赞数量
}


message douyin_favorite_action_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  int32 status_code = 1  [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
}

message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  repeated Video video_list = 3  [json_name = "video_list"]; // 用户点赞视频列表
}

message GetFavoriteCntByVIdRequest {
  int64 id = 1; // 视频唯一标识
}

message GetFavoriteCntByVIdResponse {
  int64 favorite_count = 1; // 视频的点赞总数
}

message GetIsFavoriteRequest {
  int64 video_id = 1; // 视频id
  int64 user_id = 2; // 用户id
}

message GetIsFavoriteResponse {
  bool Favorite = 1; // 是否喜欢
}

message GetFavoriteCntByUIdRequest {
  int64 user_id = 1; // 用户id
}

message GetFavoriteCntByUIdResponse {
  int64 total_favorited = 1; // 获赞数量
  int64 favorite_count = 2; // 点赞数量
}
